--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@gracewxt/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "a lighthouse student version clone of the lodash JavaScript library to practice creating various types of functions using JS.",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/GraceWXT/lotide.git"
   },
-  "author": "",
+  "author": "Grace Wang",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/GraceWXT/lotide/issues"
